[project]
authors = [{name = "IgnorantCopy", email = "231880174@smail.nju.edu.cn"}]
dependencies = []
name = "Neuroscience"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
neuroscience = { path = ".", editable = true }

[tool.pixi.tasks]
